# forgeguard

./: .gitignore  ARCHITECT_VERIFICATION.md  AUTHORIZED_USE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITHUB_PUSH_PLAN.md  LICENSE  OPSEC_SCAN_RESULTS.md  PUBLICATION_CHECKLIST.md  README.md  RELEASE_READINESS_REPORT.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: BEFORE_AFTER_EXAMPLE.md  CVE_2026_27771_POSTURE_CHECK.md  OPSEC_PUBLICATION_CHECKLIST.md  SCORING.md  SECURITY_MODEL.md  USAGE.md
examples/: scan_report_mitigated_pre_update.md  scan_report_patched_post_update.md  scan_result_mitigated_pre_update.json  scan_result_patched_post_update.json
forgeguard/: __init__.py  checks.py  cli.py  client.py  models.py  report.py  safety.py  scoring.py
tests/: test_forgeguard.py
