[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forgeguard"
version = "0.2.0"
description = "Read-only security posture self-check for self-hosted Gitea and Forgejo."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  {name = "Gexiro Global Enterprises Ltd"}
]
keywords = ["gitea", "forgejo", "security", "posture", "self-hosted", "cve-2026-27771"]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2",
  "typer>=0.12"
]

[project.urls]
Homepage = "https://github.com/gexiro-global/forgeguard"
Repository = "https://github.com/gexiro-global/forgeguard"

[project.scripts]
forgeguard = "forgeguard.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8", "build>=1"]

[tool.setuptools.packages.find]
include = ["forgeguard*"]
